--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br>
       <br>
     Na <span>Flutuar</span> você encontra pacotes de viagens 
-    nacionais e internacionais que incluem: passagens aéreas
+    nacionais e internacionais que incluem: passagens aéreas,
     hotéis, café da manhã, e até seguro viagem com 
     <strong>preços arrasadores!</strong>
     <br>
